# EPwC-2025

./: LICENSE  LINKS.md  README.md
Demo/: binary_counter.cpp
Exercises/conor_hoekstra/: 01.bqn  01.cpp  01.rs  02.apl  02.bqn  02.kap  02.rs  02.uiua  03.bqn  03.rs  README.md
Exercises/geoangelotti/: .gitignore  SmallestTwo.kts  UniqueCount.kts  go.md  go.mod  main.ts  main_test.ts  project.clj  smallest_two.go  smallest_two_test.go  unique_count.go  unique_count.jl  unique_count_test.go
Exercises/geoangelotti/src/smallest_two/: core.clj  main.clj
Exercises/geoangelotti/src/unique_count/: core.clj  main.clj
Exercises/geoangelotti/test/smallest_two/: core_test.clj
Exercises/geoangelotti/test/unique_count/: core_test.clj
Exercises/jglara/lecture1/: CMakeLists.txt  Cargo.toml  count_unique.q  main.cpp
Exercises/jglara/lecture1/src/: main.rs
Exercises/jglara/max_min/: Cargo.toml
Exercises/jglara/max_min/benches/: minmax.rs
Exercises/jglara/max_min/src/: lib.rs
Exercises/jonocarroll/: 01.md  02.md  03.md
Exercises/pmcgee/: Project_epwc.dpr  U_Gen_Data.pas
Exercises/pmcgee/instrumented/: U_Instrumented.pas  U_Test_Instrumented.pas
Exercises/pmcgee/minmax_elem/: U_MinMax_Element.pas
Exercises/pmcgee/unique_count/: Project_epwc.dpr  U_unique_count.pas
Exercises/ryan_sullivant/01_unique_count/: Cargo.toml  README.md
Exercises/ryan_sullivant/02_minmax_element/: Cargo.toml  README.md
Exercises/segreaves/: FindUniqueElementsInArray.cpp
Exercises/segreaves/Instrumented/: EfficientProgrammingWithComponents.cpp  Pair.h  Singleton.h
(+3 files in other folders)
